* Change the license for documents and assets to CC BY 4.0
  ({pull-request-url}/747[#747])
* Replace `--generate-completion` with `completion` subcommand
  ({pull-request-url}/755[#755])
* Remove help text for after auto-generated `--help`
  ({pull-request-url}/761[#761])
* Make the message for `--version` the same as the message for `-V`
  ({pull-request-url}/761[#761])

=== Removed

* Remove `qrtool-help(1)`

== {compare-url}/v0.11.7\...v0.11.8[0.11.8] - 2025-03-24

=== Changed

* Bump MSRV to 1.85.0 ({pull-request-url}/710[#710])

== {compare-url}/v0.11.6\...v0.11.7[0.11.7] - 2025-01-09

=== Changed

* Description of options which depends on the features are always available
  ({pull-request-url}/689[#689])

== {compare-url}/v0.11.5\...v0.11.6[0.11.6] - 2024-10-29

=== Added

* Supports decoding from XBM ({pull-request-url}/645[#645])

=== Fixed

* Fall-back to decoding an inverted image ({pull-request-url}/633[#633])

== {compare-url}/v0.11.4\...v0.11.5[0.11.5] - 2024-09-22

=== Added

* Supports `oklab()` and `oklch()` for `--foreground` and `--background`

== {compare-url}/v0.11.3\...v0.11.4[0.11.4] - 2024-08-04

=== Changed

* Read only the first 7,090 bytes of the input data when encoding
  ({pull-request-url}/585[#585])

== {compare-url}/v0.11.2\...v0.11.3[0.11.3] - 2024-07-22

=== Changed

* Predict input SVG image based on file contents instead of filename extension
  ({pull-request-url}/559[#559])
* Reduce size of ANSI escaped string ({pull-request-url}/563[#563])

== {compare-url}/v0.11.1\...v0.11.2[0.11.2] - 2024-07-12

=== Fixed

* Fix CHANGELOG ({pull-request-url}/556[#556])

== {compare-url}/v0.11.0\...v0.11.1[0.11.1] - 2024-07-12 [YANKED]

=== Added

* Add support for PIC output format ({pull-request-url}/543[#543])
* Add ASCII string and ANSI escape sequences to the output format
  ({pull-request-url}/553[#553])
* Add values for inverting foreground and background colors when the output format is a string ({pull-request-url}/553[#553])
