@@ -21,7 +21,9 @@ use image::{ImageError, ImageFormat};
     about,
     max_term_width(100),
     propagate_version(true),
-    arg_required_else_help(false)
+    infer_subcommands(true),
+    arg_required_else_help(false),
+    args_conflicts_with_subcommands(true)
 )]
 pub struct Opt {
     #[command(subcommand)]
@@ -33,13 +35,11 @@ pub enum Command {
     /// Encode input data in a QR code.
     ///
     /// By default, the result will be output to standard output.
-    #[command(visible_alias("enc"), visible_alias("e"))]
     Encode(Encode),
 
     /// Detect and decode a QR code.
     ///
     /// By default, the result will be output to standard output.
-    #[command(visible_alias("dec"), visible_alias("d"))]
     Decode(Decode),
 
     /// Generate shell completion.
